# Hooking.Patterns

./: .gitignore  Hooking.Patterns.cpp  Hooking.Patterns.h  README.md
builds/Visual Studio 2022/: HookingPatterns.sln  HookingPatterns.vcxproj  HookingPatterns.vcxproj.filters  premake5.lua
builds/cmake-build/: CMakeLists.txt  build.bat  debug.bat  release.bat
builds/ndk-build/: Android.mk  Application.mk  Message.mk  build.bat  clean.bat  compile_commands.json  debug.bat  release.bat
example/jni/: Android.mk  Application.mk  build.bat  clean.bat  main.cpp
example/libs/arm64-v8a/: HookingPatternsExample
example/libs/armeabi-v7a/: HookingPatternsExample
include/: Hooking.Patterns.h
src/: Hooking.Patterns.cpp
